[package]
name = "spaceball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.3"
gfx_device_gl = "0.16.2"
glam = { version = "0.24.0" }
image = "0.24.6"
imageproc = "0.23.0"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
piston_window = "0.128.0"
rand = "0.8.5"
